# test_fastapi

./: Dockerfile  README.md  docker-compose.yml
.devcontainer/: compose.extend.yml  devcontainer.json
src/: pyproject.toml
src/api_v1/: main.py  test_app.py
src/api_v1/models/: house.py
