[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_fastapi"
version = "0.1.0"
description = "A FastAPI project"
authors = [
    { name = "Simon Evers", email = "simon.evers@gmx.de" }
]
dependencies = [
    "fastapi[standard]==0.120.3",
    "pydantic==2.12.3",
    "uvicorn>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "fastapi-cli==0.0.14",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "httpx>=0.24.1",
    "black>=23.9.1",
    "mypy>=1.4.1",
    "pylint>=2.17.5",
]
